--- a/work/mystyle.html
+++ b/work/mystyle.html
@@ -41,6 +41,7 @@
     <p> ปัจจุบันกำลังศึกษาอยู่ที่มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ <br/>
         คณะเทคโนโลยีและการจัดการอุตสาหกรรม <br/>
         วิทยาเขตปราจีนบุรี สาขาเทคโนโลยีสารสนเทศ (IT) <br/>
+        รหัสนักศึกษา : 6606021610176 <br/>
         ห้อง IT-RA ปัจจุบันอยู่ชั้นปีที่ 2 <br/><br/>
         ตั้งแต่ชั้นอนุบาล - ประถมศึกษา 6 เรียนอยู่ที่โรงเรียนบ้านดอนดึง <br/>
         มัธยมศึกษาชั้นปีที่ 1 - 6 เรียนอยู่ที่โรงเรียนบ้านหมี่วิทยา <br/>
