--- a/work/10176.html
+++ b/work/10176.html
@@ -6,21 +6,22 @@
     <title>My Web Page</title>
     <link rel="stylesheet" type="text/css" href="10176.css">
 </head>
-<body>
+<body class="bg">
     <hr id="yellow" />
-    <h2> Personal Information </h2>
+    <h2 class="big"> Personal Information </h2>
     <hr id="yellow" />
-    <p> Name-Surname : นางสาววรินยุพา เจียมอยู่ <br/>
+    <p class="text"> Name-Surname : นางสาววรินยุพา เจียมอยู่ <br/>
         Nickname : อิม <br/>
         Age : 20 ปี <br/>
         เกิดวันที่ 13/07/2004 <br/>
     </p>
     <hr id="red" />
-    <h3> Student Information </h3>
+    <h3 class="header"> Student Information </h3>
     <hr id="red" />
-    <p> ปัจจุบันกำลังศึกษาอยู่ที่มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ <br/>
+    <p class="text"> ปัจจุบันกำลังศึกษาอยู่ที่มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ <br/>
         คณะเทคโนโลยีและการจัดการอุตสาหกรรม <br/>
         วิทยาเขตปราจีนบุรี สาขาเทคโนโลยีสารสนเทศ (IT) <br/>
+        รหัสนักศึกษา : 6606021610176 <br/>
         ห้อง IT-RA ปัจจุบันอยู่ชั้นปีที่ 2 <br/><br/>
         ตั้งแต่ชั้นอนุบาล - ประถมศึกษา 6 เรียนอยู่ที่โรงเรียนบ้านดอนดึง <br/>
         มัธยมศึกษาชั้นปีที่ 1 - 6 เรียนอยู่ที่โรงเรียนบ้านหมี่วิทยา <br/>
